# QmlImageViewer

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
qml/: main.qml
qml/Control/: SunBar.qml  SunOk.qml
qml/Template/: SunConfigWin.qml
qml/Window/: SunBrightnessWin.qml  SunChangedListWin.qml  SunGammaWin.qml  SunGrayWin.qml
src/: ChangedQueue.cpp  ImageView.cpp  ImageViewModel.cpp  SnapshotManager.cpp  UndoRedoQueue.cpp  Utils.cpp  main.cpp
src/include/: ChangedQueue.h  ImageView.h  ImageViewModel.h  SnapshotManager.h  UndoRedoQueue.h  Utils.h
src/include/opencv2/: 3d.hpp  calib.hpp  core.hpp  features.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  objdetect.hpp  photo.hpp  stereo.hpp  stitching.hpp  videoio.hpp
src/include/opencv2/3d/: depth.hpp  odometry.hpp  odometry_frame.hpp  volume.hpp  volume_settings.hpp
src/include/opencv2/3d/detail/: kinfu_frame.hpp
src/include/opencv2/core/: base.hpp  cuda_types.hpp  exception.hpp  mat.hpp  ocl.hpp  saturate.hpp  types.hpp  utility.hpp  va_intel.hpp
src/include/opencv2/core/hal/: intrin_sse.hpp  intrin_wasm.hpp
src/include/opencv2/dnn/: all_layers.hpp  dnn.hpp
src/include/opencv2/imgcodecs/: ios.h  macosx.h
src/include/opencv2/imgproc/: bindings.hpp  segmentation.hpp
src/include/opencv2/objdetect/: aruco_board.hpp  aruco_detector.hpp  aruco_dictionary.hpp  barcode.hpp  charuco_detector.hpp  face.hpp  graphical_code_detector.hpp
src/include/opencv2/photo/: cuda.hpp
src/include/opencv2/stitching/: warpers.hpp
src/include/opencv2/stitching/detail/: autocalib.hpp  blenders.hpp  exposure_compensate.hpp  matchers.hpp  motion_estimators.hpp  seam_finders.hpp  warpers.hpp
src/include/opencv2/video/: background_segm.hpp  tracking.hpp
src/include/opencv2/video/detail/: tracking.detail.hpp
